  defaults.timing_resolution will be used as the duration and the end will be
  recalculated by anchoring the start value.
* **New:** Adding a TimeLog to a Task and extending its schedule timing will
  now always use the least meaningful timing unit. So expanding a task from 16
  hours to 18 hours will result a task with 2 days of schedule (considering the
  daily_working_hours = 9).

0.2.3.5
=======

* **Fix:** Fixed a bug in ``stalker.models.auth.LocalSession`` where stalker
  was complaining about "copy_reg" module, it seems that it is related to
  `this bug`_.

  .. _this bug: http://www.archivum.info/python-bugs-list@python.org/2007-04/msg00222.html

0.2.3.4
=======

* **Update:** Fixed a little bug in Link.extension property setter.
* **New:** Moved the stalker.models.env.EnvironmentBase class to
  "Anima Tools" python module.
* **Fix:** Fixed a bug in stalker.models.task.Task._responsible_getter() where
  it was always returning the greatest parents responsible as the responsible
  for the child task when the responsible is set to None for the child.
* **New:** Added ``stalker.models.version.Version.naming_parents`` which
  returns a list of parents starting from the closest parent Asset, Shot or
  Sequence.
* **New:** ``stalker.models.version.Version.nice_name`` now generates a name
  starting from the closest Asset, Shot or Sequence parent.

0.2.3.3
=======

* **New:** Ticket action methods (resolve, accept, reassign, reopen) now
  return the created TicketLog instance.

0.2.3.2
=======

* **Update:** Added tests for negative or zero fps value in Project class.
* **Fix:** Minor fix to ``schedule_timing`` argument in Task class, where IDEs
  where assuming that the value passed to the ``schedule_timing`` should be
  integer where as it accepts floats also.
* **Update:** Removed ``bg_color`` and ``fg_color`` attributes (and columns)
  from Status class. Use SimpleEntity.html_class and SimpleEntity.html_style
  attributes instead.